Input Search - Fix alignment of icon

--- a/packages/ui/src/5-elements/form/_text-inputs.scss
+++ b/packages/ui/src/5-elements/form/_text-inputs.scss
@@ -37,7 +37,7 @@
     }
   }
   .icon-search {
-    position:absolute; inset-inline-start:pxToRem(16); inset-block-start:pxToRem(3);
+    position:absolute; inset-inline-start:pxToRem(16); inset-block-start:pxToRem(1);
     font-size:pxToRem(19); pointer-events:none;
   }
 }
